avoid Map.copyOf()